Part4/Exercise4.01/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logoutput-pingpong
  name: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          imagePullPolicy: Always
          image: sushashu/pingpong:4.01
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /pingz
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: logoutput-pingpong
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
